--- a/CS_183_HW3.ipynb
+++ b/CS_183_HW3.ipynb
@@ -3,15 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "d9ZBSz63pDyJ"
-      },
-      "source": [
-        "# 0. Setup"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "sOUCNy4EpGTR"
       },
       "source": [
@@ -39,7 +30,8 @@
       },
       "outputs": [],
       "source": [
-        "!pip install --upgrade huggingface_hub datasets transformers"
+        "!pip install --upgrade huggingface_hub datasets transformers\n",
+        "!pip install --upgrade torch"
       ]
     },
     {
@@ -51,16 +43,17 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "os.environ[\"HF_TOKEN\"] = \"YOUR_TOKEN\"\n",
+        "os.environ[\"HF_TOKEN\"] = \"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\"\n",
         "\n",
         "from typing import List\n",
+        "import torch\n",
         "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
         "\n",
         "# Load tokenizer/model\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"Qwen/Qwen2.5-3B\")\n",
-        "# model = AutoModelForCausalLM.from_pretrained(\"Qwen/Qwen2.5-3B\")\n",
-        "# model.to(\"cuda\")\n",
-        "# model.eval()"
+        "model = AutoModelForCausalLM.from_pretrained(\"Qwen/Qwen2.5-3B\")\n",
+        "model.to(\"cpu\")\n",
+        "model.eval()"
       ]
     },
     {
@@ -81,13 +74,11 @@
       "outputs": [],
       "source": [
         "@torch.inference_mode()\n",
-        "def get_next_token_scores(prefix: str) -> List[float]:\n",
+        "def get_next_token_scores(prefix: List[int]) -> List[float]:\n",
         "    \"\"\"\n",
-        "    Return raw next-token scores (logits) s(* | prefix).\n",
+        "    Return raw next-token scores (logits) s(* | prefix), where prefix is a list of token ids.\n",
         "    \"\"\"\n",
-        "    inputs = tokenizer(prefix, return_tensors=\"pt\", add_special_tokens=True)\n",
-        "    inputs = {k: v.to(model.device) for k, v in inputs.items()}\n",
-        "    out = model(**inputs)\n",
+        "    out = model(input_ids=prefix)\n",
         "    next_logits = out.logits[:, -1, :].squeeze(0)\n",
         "    return next_logits.detach().cpu().tolist()"
       ]
@@ -224,7 +215,7 @@
       },
       "outputs": [],
       "source": [
-        "def next_tok_prob(prefix: str, temperature: float):\n",
+        "def next_tok_prob(prefix: List[int], temperature: float):\n",
         "  pass # TODO"
       ]
     },
@@ -266,7 +257,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we will implement a function that computes the perplexity of an entire text dataset."
+        "Now we will implement a function that computes the perplexity of an entire text dataset.\n",
+        "\n",
+        "**NOTE: this model does not have a BOS token, so we will use the first token in each sequence as the prefix.**"
       ]
     },
     {
@@ -371,7 +364,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now use this function to sample 1000 texts for each temperature value in {0, 0.7, 1, 1.2} using the prefix \"hello\" and compare their length and vocabulary distributions. Why might temperature result in the observed differences?"
+        "Now use this function to sample 50 texts with max_length of 100 for each temperature value in {0, 0.7, 1, 1.2} using the prefix \"hello\" and compare their vocabulary distributions. Why might temperature result in the observed differences?"
       ]
     },
     {
@@ -383,7 +376,7 @@
         "length_dist_per_temp = {0.0: None, 0.7: None, 1.0: None, 1.2: None}\n",
         "vocab_dist_per_temp = {0.0: None, 0.7: None, 1.0: None, 1.2: None}\n",
         "\n",
-        "# TODO sample 1000 texts for each temperature value in {0, 0.7, 1, 1.2} using the prefix \"hello\" and compare their length and vocabulary distributions. Why might temperature result in the observed differences?\n",
+        "# TODO sample 50 texts for each temperature value in {0, 0.7, 1, 1.2} using the prefix \"hello\" and compare their length and vocabulary distributions. Why might temperature result in the observed differences?\n",
         "\n",
         "with open(\"length_distributions_per_temp.json\", \"w\") as f:\n",
         "\tjson.dump(length_dist_per_temp, f)\n",
@@ -413,7 +406,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report Use ancestral sampling with temperature = 1 and ϵ in {0, 0.05, 0.1} to sample 1000 texts for each value of ϵ using the prefix \"hello\", and compare their length and vocabulary distributions. Why might ϵ result in the observed differences?"
+        "Report Use ancestral sampling with temperature = 1 and ϵ in {0, 0.05, 0.1} to sample 50 texts of max length 100 for each value of ϵ using the prefix \"hello\", and compare their vocabulary distributions. Why might ϵ result in the observed differences?"
       ]
     },
     {
@@ -455,7 +448,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report Use ancestral sampling with temperature = 1 and k in {1, 20, 100} to sample 1000 texts for each value of k with the prefix \"hello\", and compare their length and vocabulary distributions. Why might k result in the observed differences?"
+        "Report Use ancestral sampling with temperature = 1 and k in {1, 20, 100} to sample 50 texts with max_length 100 tokens for each value of k with the prefix \"hello\", and compare their vocabulary distributions. Why might k result in the observed differences?"
       ]
     },
     {
@@ -494,7 +487,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report Use ancestral sampling with temperature = 1 and p in {0.5, 0.9, 1.0} to sample 1000 texts for each value of p with the prefix \"hello\", and compare their length and vocabulary distributions. Why might p result in the observed differences?"
+        "Report Use ancestral sampling with temperature = 1 and p in {0.5, 0.9, 1.0} to sample 50 texts with max_length 100 for each value of p with the prefix \"hello\", and compare their length and vocabulary distributions. Why might p result in the observed differences?"
       ]
     },
     {
