--- a/CS_183_HW3.ipynb
+++ b/CS_183_HW3.ipynb
@@ -254,10 +254,14 @@
       },
       "source": [
         "**Report** Compute negative log likelihood for all of the sequences in the dataset.\n",
-        "1. The 20 sentences with the highest and lowest total negative log likelihoods across the two datasets combined.\n",
-        "2. The 20 sentences with the highest and lowest total negative log likelihoods, normalized by sequence length, across the two datasets combined.\n",
-        "3. What properties do high-likelihood sequences have that low-probability ones don’t?\n",
-        "4. How does normalizing by sequence length influence this?"
+        "\n",
+        "★ The 20 sentences with the highest and lowest total negative log likelihoods across the two datasets combined.\n",
+        "\n",
+        "★ The 20 sentences with the highest and lowest total negative log likelihoods, normalized by sequence length, across the two datasets combined.\n",
+        "\n",
+        "★ What properties do high-likelihood sequences have that low-probability ones don’t?\n",
+        "\n",
+        "★ How does normalizing by sequence length influence this?"
       ]
     },
     {
@@ -371,7 +375,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now use this function to sample 50 texts with max_length of 100 for each temperature value in {0, 0.7, 1, 1.2} using the prefix \"hello\" and compare their vocabulary distributions. Why might temperature result in the observed differences?"
+        "Now use this function to sample 50 texts with max_length of 100 for each temperature value in {0, 0.7, 1, 1.2} using the prefix \"hello\" and compare their vocabulary distributions.\n",
+        "\n",
+        "★ Why might temperature result in the observed differences?"
       ]
     },
     {
@@ -410,7 +416,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report Use ancestral sampling with temperature = 1 and ϵ in {0, 0.05, 0.1} to sample 50 texts of max length 100 for each value of ϵ using the prefix \"hello\", and compare their vocabulary distributions. Why might ϵ result in the observed differences?"
+        "Report Use ancestral sampling with temperature = 1 and ϵ in {0, 0.05, 0.1} to sample 50 texts of max length 100 for each value of ϵ using the prefix \"hello\", and compare their vocabulary distributions.\n",
+        "\n",
+        "★ Why might ϵ result in the observed differences?"
       ]
     },
     {
@@ -449,7 +457,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report Use ancestral sampling with temperature = 1 and k in {1, 20, 100} to sample 50 texts with max_length 100 tokens for each value of k with the prefix \"hello\", and compare their vocabulary distributions. Why might k result in the observed differences?"
+        "Report Use ancestral sampling with temperature = 1 and k in {1, 20, 100} to sample 50 texts with max_length 100 tokens for each value of k with the prefix \"hello\", and compare their vocabulary distributions.\n",
+        "\n",
+        "★ Why might k result in the observed differences?"
       ]
     },
     {
@@ -488,7 +498,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report Use ancestral sampling with temperature = 1 and p in {0.5, 0.9, 1.0} to sample 50 texts with max_length 100 for each value of p with the prefix \"hello\", and compare their length and vocabulary distributions. Why might p result in the observed differences?"
+        "Report Use ancestral sampling with temperature = 1 and p in {0.5, 0.9, 1.0} to sample 50 texts with max_length 100 for each value of p with the prefix \"hello\", and compare their length and vocabulary distributions.\n",
+        "\n",
+        "★ Why might p result in the observed differences?"
       ]
     },
     {
@@ -1729,7 +1741,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Report the performance of each method using accuracy, precision, recall, and F1 score. Which method performs the best? Which performs the worst? Why?"
+        "★ Report the performance of each method using accuracy, precision, recall, and F1 score. Which method performs the best? Which performs the worst? Why?"
       ]
     },
     {
@@ -2465,7 +2477,7 @@
       "source": [
         "For evaluation, we also need to be able to generate entire strings from the model. We'll first define a greedy inference procedure here. Later on, we'll implement beam search.\n",
         "\n",
-        "A correct implementation of greedy decoding should get above 20 BLEU on the validation set."
+        "A correct implementation of should get above 20 BLEU on the validation set."
       ]
     },
     {
@@ -2749,7 +2761,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 4.2 Attention visualization: 1-Page Analysis (10 Points)"
+        "### 4.2 Attention visualization: Analysis (10 Points)"
       ]
     },
     {
@@ -2760,12 +2772,11 @@
         "\n",
         "You may visualize decoder attention on gold source-target pairs from the validation data. You do not need to run any inference.\n",
         "\n",
-        "For this section, you will submit a write-up interpreting attention maps generated by your model. Your write-up should be 1-page maximum in length and should be submitted in PDF format. You may use any editor you like, but we recommend using LaTeX and working in an environment like Overleaf. For full credit, your write-up should include:\n",
+        "For this section, let's interpret the attention maps generated by your model. You should include:\n",
         "\n",
-        "* A figure with attention map plots for 4 sentence pairs from the validation set (the method `imshow`, or equivalent, will likely be useful here). We encourage you to look through more maps to aid your analysis, but please only include 4 representative plots in the figure. \n",
-        "* A brief discussion over trends you discover in the plots. Do the maps line up with your intuition, are there any surprising alignments? Are there any many-to-one or many-to-many alignments, or mainly one-to-one? Using a tool like Google Translate on substrings may help give some insight into this.\n",
+        "★ A figure with attention map plots for 4 sentence pairs from the validation set. We encourage you to look through more maps to aid your analysis, but please only include 4 representative plots in the figure. \n",
         "\n",
-        "When you submit the file, please name it report.pdf."
+        "★ A brief discussion over trends you discover in the plots. Do the maps line up with your intuition, are there any surprising alignments? Are there any many-to-one or many-to-many alignments, or mainly one-to-one? Using a tool like Google Translate on substrings may help give some insight into this."
       ]
     },
     {
