--- a/CS_183_HW3.ipynb
+++ b/CS_183_HW3.ipynb
@@ -408,7 +408,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def generate_sequence_epsilon(prefix: str, temperature: float, epsilon: float):\n",
+        "def generate_sequence_epsilon(prefix: str, temperature: float, epsilon: float, max_length: int):\n",
         "\tpass #TODO"
       ]
     },
@@ -449,7 +449,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def generate_sequence_top_k(prefix: str, temperature: float, top_p: float):\n",
+        "def generate_sequence_top_k(prefix: str, temperature: float, top_k: float, max_length: int):\n",
         "\tpass #TODO"
       ]
     },
@@ -490,7 +490,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def generate_sequence_top_p(prefix: str, temperature: float, top_p: float):\n",
+        "def generate_sequence_top_p(prefix: str, temperature: float, top_p: float, max_length: int):\n",
         "\tpass #TODO"
       ]
     },
@@ -1163,7 +1163,7 @@
         "\n",
         "You will use PyTorch to implement the model.  We've provided a little bit of code to help with the data loading using PyTorch's data loaders (https://pytorch.org/docs/stable/data.html)\n",
         "\n",
-        "A model with the following architecture and hyperparameters should reach a validation perplexity below 226.\n",
+        "A model with the following architecture and hyperparameters should reach a validation perplexity below 550.\n",
         "* embed the words with dimension 128, then flatten into a single embedding for $n-1$ words (with size $(n-1)*128$)\n",
         "* run 2 hidden layers with 1024 hidden units, then project down to size 128 before the final layer (ie. 4 layers total).\n",
         "* use weight tying for the embedding and final linear layer (this made a very large difference in our experiments); you can do this by creating the output layer with `nn.Linear`, then using `F.embedding` with the linear layer's `.weight` to embed the input\n",
@@ -1348,6 +1348,75 @@
         "* instead of projecting directly from the last LSTM output to the vocabulary size for softmax, project down to a smaller size first (e.g. 512->128->vocab_size). **NOTE: You may find that adding nonlinearities between these layers can hurt performance, try without first.**\n",
         "* use the same weights for the embedding layer and the pre-softmax layer; dimension 128\n",
         "* train with Adam (using default learning rates) for at least 20 epochs\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create datasets for the LSTM model\n",
+        "# Since we're using a custom implementation, we need to create a BPTT iterator\n",
+        "\n",
+        "class LanguageModelingDataset:\n",
+        "    \"\"\"Simple dataset wrapper for language modeling.\"\"\"\n",
+        "    def __init__(self, text_tokens):\n",
+        "        # Convert tokens to indices\n",
+        "        self.data = torch.tensor(ids(text_tokens), dtype=torch.long)\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.data)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        return self.data[idx]\n",
+        "\n",
+        "class BPTTIterator:\n",
+        "    \"\"\"Custom BPTT (Backpropagation Through Time) iterator.\n",
+        "\n",
+        "    This mimics the behavior of torchtext.data.BPTTIterator.\n",
+        "    \"\"\"\n",
+        "    def __init__(self, dataset, batch_size, bptt_len, device):\n",
+        "        self.data = dataset.data.to(device)\n",
+        "        self.batch_size = batch_size\n",
+        "        self.bptt_len = bptt_len\n",
+        "        self.device = device\n",
+        "\n",
+        "        # Calculate number of batches\n",
+        "        # We divide the data into batch_size chunks\n",
+        "        self.n_tokens = (len(self.data) // batch_size) * batch_size\n",
+        "        self.data = self.data[:self.n_tokens].view(batch_size, -1).t().contiguous()\n",
+        "\n",
+        "    def __iter__(self):\n",
+        "        for i in range(0, self.data.size(0) - 1, self.bptt_len):\n",
+        "            seq_len = min(self.bptt_len, self.data.size(0) - 1 - i)\n",
+        "            # Create batch object with .text and .target attributes\n",
+        "            batch = type('obj', (object,), {\n",
+        "                'text': self.data[i:i+seq_len],\n",
+        "                'target': self.data[i+1:i+1+seq_len]\n",
+        "            })()\n",
+        "            yield batch\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return (self.data.size(0) - 1 + self.bptt_len - 1) // self.bptt_len\n",
+        "\n",
+        "# Create a namespace to mimic torchtext.data\n",
+        "class TorchtextData:\n",
+        "    BPTTIterator = BPTTIterator\n",
+        "\n",
+        "class TorchtextNamespace:\n",
+        "    data = TorchtextData()\n",
+        "\n",
+        "torchtext = TorchtextNamespace()\n",
+        "\n",
+        "# Create datasets from the text data\n",
+        "print(\"Creating LSTM datasets...\")\n",
+        "train_dataset = LanguageModelingDataset(train_text)\n",
+        "validation_dataset = LanguageModelingDataset(validation_text)\n",
+        "test_dataset = LanguageModelingDataset(test_text)\n",
+        "print(f\"Train dataset size: {len(train_dataset)}\")\n",
+        "print(f\"Validation dataset size: {len(validation_dataset)}\")\n",
+        "print(f\"Test dataset size: {len(test_dataset)}\")\n"
       ]
     },
     {
@@ -1878,7 +1947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2479,6 +2548,13 @@
         "\n",
         "A correct implementation of should get above 20 BLEU on the validation set."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
